deploy/k8s/base/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsw-db
  namespace: ${NAMESPACE}
spec:
  selector:
    app: jsw-db
  ports:
    - name: ${DB_SERVICE_PORT_NAME}
      port: ${DB_PORT}
      targetPort: ${DB_PORT}
