deploy/k8s/base/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsw-front
  namespace: ${NAMESPACE}
spec:
  selector:
    app: jsw-front
  ports:
    - name: http
      port: 80
      targetPort: 80
