deploy/k8s/base/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsw-server
  namespace: ${NAMESPACE}
spec:
  selector:
    app: jsw-server
  ports:
    - name: http
      port: 8002
      targetPort: 8002
